recursion.logo.lessons.recursion.logo.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
  current(step) 
  baissebrosse()
  if (steps!=1){
    avance(length)
  	droite(angle)
  	tree(steps-1,length*shrink,angle,shrink)
  	gauche(2*angle)
  	tree(steps-1,length*shrink,angle,shrink)
  	droite(angle)
    recule(length)
  }
  if (steps==1){
    levebrosse()
    avance(length)
    recule(length)
  }
}